[package]
name = "ruwasm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-channel = "2.5.0"
clap = { version = "4.6.1", features = ["derive"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
futures = "0.3.32"
futures-channel = "0.3.32"
futures-intrusive = "0.5.0"
log = { version = "0.4.29", features = ["serde"] }
#rustradio = { version = "0.16.6", features = ["wasm"] }
rustradio = { path = "../rustradio", features = ["wasm"] }
rustradio_macros = "0.16.3"
#rustradio = { git = "https://github.com/ThomasHabets/rustradio", branch = "wasm", features = ["wasm"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.140"
stderrlog = "0.6.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.64"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "WorkerGlobalScope",
    "Document",
    "HtmlInputElement",
    "HtmlButtonElement",
    "File",
    "FileList",
    "Blob",
    "BinaryType",
#    "FileReader",
    "Event",
    "DedicatedWorkerGlobalScope",
    "Worker",
    "WorkerOptions",
    "WorkerType",
    "WebSocket",
    "MessageEvent",
#    "ProgressEvent",
    "console",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "MediaQueryList",
    "DomStringMap",
]
[lib]
crate-type = ["cdylib"]  # <-- THIS IS CRITICAL
[profile.release]
debug = true
